# Copyright © 2026 Google
# SPDX-License-Identifier: MIT

genvk = files('genvk.py')

genvk_depends = files(
    'cereal/__init__.py',
    'cereal/api_log_decoder.py',
    'cereal/common/__init__.py',
    'cereal/common/codegen.py',
    'cereal/common/vulkantypes.py',
    'cereal/counting.py',
    'cereal/decoder.py',
    'cereal/decodersnapshot.py',
    'cereal/deepcopy.py',
    'cereal/dispatch.py',
    'cereal/encoder.py',
    'cereal/extensionstructs.py',
    'cereal/frontend.py',
    'cereal/functable.py',
    'cereal/handlemap.py',
    'cereal/marshaling.py',
    'cereal/marshalingdefs.py',
    'cereal/reservedmarshaling.py',
    'cereal/subdecode.py',
    'cereal/testing.py',
    'cereal/transform.py',
    'cereal/unbox.py',
    'cereal/vkextensionstructuretype.py',
    'cereal/wrapperdefs.py',
    'cerealgenerator.py',
    'cgenerator.py',
    'generator.py',
    'reg.py',
)
